# chatting-app

./: .gitignore
client/: CMakeLists.txt
client/src/: main.cpp
server/: CMakeLists.txt
server/src/: main.cpp
